--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   http: ^0.12.0+3
   after_layout: ^1.0.7+2
   shared_preferences: ^0.5.1
+  sqflite: ^0.12.2+1
+  path_provider: ^0.4.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
